<resources>
    <string name="app_name">LiveDataTest</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="_0">0</string>
    <string name="question_number">Question Number:</string>
    <string name="score">Score:</string>
    <string name="answer">Answer</string>
    <string name="question_count">Question Count:</string>
    <string name="randomq">RandomQ</string>
    <string name="submit">Submit</string>
    <string name="hurry">Hurry up!</string>
    <string name="almost">Almost There!</string>
</resources>